Preference and Sector and Categories added
